# ImageRefinery

./: .gitmodules  CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt
app/reduce_img/: CMakeLists.txt  main.cpp
app/reduce_img_tui/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/sung/imgref/: argpar.hpp  configs.hpp  filesys.hpp  img_refinery.hpp
lib/src/: argpar.cpp  filesys.cpp  img_refinery.cpp
py/: merge_ao.py
